tests/bad/ifTypeError.vshs
// Typing error in if condition.

a :: Int = if 2+2 then 1 else 2;